Fix box spacing in mobile

--- a/source/assets/stylesheets/locastyle/base/_base.sass
+++ b/source/assets/stylesheets/locastyle/base/_base.sass
@@ -102,6 +102,12 @@
 .ls-background-danger
   background-color: #d9534f !important
 
+.ls-screen-sm,
+.ls-screen-xs,
+  .ls-big-space
+    [class*="col-md"]
+      margin-bottom: 10px
+
 
 @media (min-width: $screen-sm)
   .ls-main
